--- a/hie.yaml
+++ b/hie.yaml
@@ -3,3 +3,6 @@ cradle:
 
     - path: "./src"
       component: "lib:vendere"
+    
+    - path: "./app/market-plutus.hs"
+      component: "exe:market-plutus"
