--- a/vendere.cabal
+++ b/vendere.cabal
@@ -32,6 +32,7 @@ library
                      , Market.Offchain
                      , Market.Trace
                      , Utility
+                     , SerialiseJSON
   build-depends:       aeson
                      , base ^>=4.14.1.0
                      , base16-bytestring
@@ -68,7 +69,4 @@ executable market-plutus
 
   build-depends:        cardano-api
                       , vendere
-                      , bech32
-                      , plutus-ledger
-                      , plutus-tx
 
