Update and rename vendere.cabal to martify.cabal

--- a/martify.cabal
+++ b/martify.cabal
@@ -1,5 +1,5 @@
 Cabal-Version:      2.4
-Name:               vendere
+Name:               martify
 Version:            0.1.0.0
 Build-Type:         Simple
 
